--- a/BioProject/Web.config
+++ b/BioProject/Web.config
@@ -109,4 +109,4 @@
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data><connectionStrings><add name="BiometricContextDb" connectionString="metadata=res://*/BiometricModel.csdl|res://*/BiometricModel.ssdl|res://*/BiometricModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;user id=root;password=second;server=localhost;port=3307;database=biometric;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
