--- a/BioProject/BioProject.csproj
+++ b/BioProject/BioProject.csproj
@@ -54,6 +54,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="GriauleFingerprintLibrary">
+      <HintPath>..\..\..\..\Program Files (x86)\Griaule\Fingerprint SDK 2009\bin\GriauleFingerprintLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
@@ -220,14 +223,23 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BiometricModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\DepartmentController.cs" />
+    <Compile Include="Controllers\FacultyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\UniversityController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="department.cs">
       <DependentUpon>BiometricModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Dtos\ActivationDTO.cs" />
+    <Compile Include="Dtos\DepartmentDTO.cs" />
+    <Compile Include="Dtos\FacultyDTO.cs" />
+    <Compile Include="Dtos\FingerPrintDTO.cs" />
     <Compile Include="Dtos\LoginDTO.cs" />
+    <Compile Include="Dtos\StudentDTO.cs" />
+    <Compile Include="Dtos\StudentRegistrationDTO.cs" />
+    <Compile Include="Dtos\UniversityAdminDTO.cs" />
     <Compile Include="Dtos\UniversityDTO.cs" />
     <Compile Include="faculty.cs">
       <DependentUpon>BiometricModel.tt</DependentUpon>
@@ -242,10 +254,20 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\Utils.cs" />
+    <Compile Include="Models\FingerPrintHelper.cs" />
     <Compile Include="Models\UniversityHelper.cs" />
+    <Compile Include="picture.cs">
+      <DependentUpon>BiometricModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response\ActivationResponseDTO.cs" />
+    <Compile Include="Response\DepartmentResponseDTO.cs" />
+    <Compile Include="Response\FacultyResponseDTO.cs" />
     <Compile Include="Response\RegisterResponseDTO.cs" />
+    <Compile Include="Response\StudentResponseDTO.cs" />
+    <Compile Include="Response\StudentWithPictureDTO.cs" />
+    <Compile Include="Response\UniversityAdminLiteResponseDTO.cs" />
+    <Compile Include="Response\UniversityAdminResponseDTO.cs" />
     <Compile Include="student.cs">
       <DependentUpon>BiometricModel.tt</DependentUpon>
     </Compile>
@@ -312,7 +334,9 @@
     </EntityDeploy>
     <Content Include="BiometricModel.edmx.diagram">
       <DependentUpon>BiometricModel.edmx</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -360,6 +384,44 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
