--- a/BioProject/Web.Release.config
+++ b/BioProject/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="BiometricContextDb"
+         connectionString="metadata=res://*/BiometricModel.csdl|res://*/BiometricModel.ssdl|res://*/BiometricModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;user id=root;password=shizmh;server=50.59.99.200;port=3306;database=biometric;persistsecurityinfo=True&quot;"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
