--- a/BioProject/Web.config
+++ b/BioProject/Web.config
@@ -22,7 +22,6 @@
     </httpModules>
   </system.web>
   <system.webServer>
-
     <handlers>
       <remove name="OPTIONSVerbHandler" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
@@ -34,20 +33,49 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <httpProtocol>
-      <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization, Accept" />
-        <add name="Access-Control-Allow-Methods" value="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" />
-      </customHeaders>
+      <!--<customHeaders>
+        <add name="Access-Control-Allow-Origin" value="http://localhost:8080" />
+        <add name="Access-Control-Allow-Credentials" value="true" />
+        <add name="Access-Control-Allow-Headers" value="Authorization,Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,Access-Control-Allow-Origin" />
+        <add name="Access-Control-Allow-Methods" value="GET,POST,HEAD,OPTIONS,PUT,DELETE" />
+        <add name="Access-Control-Max-Age" value="1800" />
+      </customHeaders>-->
     </httpProtocol>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="WebDAVModule" />
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
+  <!--<system.webServer>
+    <handlers>
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="WebDAV" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="OPTIONSVerbHandler" path="*" verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="ProtocolSupportModule" requireAccess="None" responseBufferLimit="4194304" />
+    </handlers>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization, Accept" />
+        <add name="Access-Control-Allow-Methods" value="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" />
+      </customHeaders>
+    </httpProtocol>
+    <modules>
+      <remove name="WebDAVModule"/>   
+      <remove name="FormsAuthentication" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+    </modules>
+    <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>-->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
